2008-02-02 Jens Tkotz <jens@peino.de> 1.5.8-svn-b20

 * Fix: Some wordings.

 Thanks to Julien.

2008-02-02 Jens Tkotz <jens@peino.de> 1.5.8-svn-b19

 * Fix: A lot of typos (ggTranslate etc.)

 * Fix: Use correct charset (not locale) in rss.php

 * Fix: Typos in ecard handling.

 * Change: All links do now have a pointer as mousecursor.

2008-01-13 Jens Tkotz <jens@peino.de> 1.5.8-svn-b18

 * Fix: Use original cvs Id Tag, don't substitute with ours.

 * Fix: Typo in view_album.php

 * Change: Little code style in classes/HTML/table.php

 * Fix: Use correct charset (not locale) in rss.php

 * Fix: Use gTranslate() in rss.php and login.php

 * Fix: Use currentl language, not the default.

 Thanks to 'Maks' from Forums for the rss fixes.

2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b17

 * Fix: HTML validation.

2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b16

 * Change: Decreased debugging a little in exec_internal()

 * Fix: Forgot a ImageMap Change in b12

 * Fix: Little permission bug in view_comments.php
  
2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b15

 * Change: Default width for popups:600 (500)

 * Change: Default height for popups: 550 (500)

 * Change: Enhanced function popup_link()

 * Fix: Function addUrlArg() was broken.

 * New: Function galleryIconLink()
 
2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b14

 * Change: Enhanced function drawSelect2()
		 - Added list $optionIgnoreAttrs
		 - Added css for selected and disabled entries

2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b13

 * Change: Enhanced function getItemActions()
		 - Added param $popupsOnly and $caption
		 - Former 'pure_text' is now 'text'
		 - Former 'text' is now 'value'
		 - Added Optional icon
		 - Fixed several wrong conditions
		 - Added sorting by field 'text'

 Above Changes are already used in b12 in view_photo.php 
		
2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b12-UNSTABLE

 * Update: WZ Tooltip and WZ jsgraphic

 * Change: Adjustments to the WZ update.
