@@ -1,3 +1,10 @@
+2008-02-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b21
+
+ * Fix: make_mo_files.sh did not work well in Solaris 7,
+        also added some more robustness.
+
+   Thanks to Maarten Deen, Niels Baggesen and Alan Harder.
+
 2008-02-02 Jens Tkotz <jens@peino.de> 1.5.8-svn-b20
 
  * Fix: Some wordings.
